--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>La importancia del testing en las empresas</title>
   <link rel="stylesheet" href="./css/normalize.css" />
   <link rel="stylesheet" href="./css/styles.css" />
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
   <header class="header">
@@ -14,12 +15,13 @@
         <img src="./media/orbit.png" alt="orbitDev logo" class="logo-img" />
         <h1 class="logo-text">Orbit<span>Dev</span></h1>
       </div>
-      <nav class="nav">
+      <nav>
         <ul class="nav-list">
-          <li><a href="#">Inicio</a></li>
-          <li><a href="#">Artículos</a></li>
-          <li><a href="#">Proyectos</a></li>
-          <li><a href="#">Contacto</a></li>
+          <li class="nav-p"><a href="#">Inicio</a></li>
+          <li class="nav-p"><a href="#">Artículos</a></li>
+          <li class="nav-p"><a href="#">Proyectos</a></li>
+          <li class="nav-p"><a href="#">Contacto</a></li>
+          <li></li><button class="icon-btn" id="menu-toggle"><i class="fas fa-bars"></i></button></li>
         </ul>
       </nav>
     </div>
