listo para entregar

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
   <footer class="footer">
     <div class="footer-container">
-      <div class="footer-column footer-brand">
+      <div class="footer-column">
         <img src="./media/orbit.png" alt="orbitDev logo" class="footer-logo" />
         <p class="footer-description">orbitDev es un medio independiente que explora el impacto del desarrollo y la tecnología en la sociedad.</p>
       </div>
